{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 154,
  "lineage": "d24e7cb0-494d-ef01-ac6c-8d30b3acf42b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SaEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a5253c35ee63686",
            "arn": "arn:aws:ec2:sa-east-1:398561966751:instance/i-0f0d90b98801f61d7",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0d90b98801f61d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Chungyun.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0049e0dd8061d3db5",
            "private_dns": "ip-10-0-0-250.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.250",
            "public_dns": "ec2-54-94-110-193.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.110.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03e83eb9106599b5d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015d424d55738a30c",
            "tags": {
              "Name": "SA-EC2"
            },
            "tags_all": {
              "Name": "SA-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0c8fe9eed5517f8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.WEBSG",
            "aws_subnet.SaPublicSN1",
            "aws_vpc.SaVPC",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SaIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:398561966751:internet-gateway/igw-026689049140e84ad",
            "id": "igw-026689049140e84ad",
            "owner_id": "398561966751",
            "tags": {
              "Name": "SA-IGW"
            },
            "tags_all": {
              "Name": "SA-IGW"
            },
            "vpc_id": "vpc-026f59223f9ddc116"
          },
          "dependencies": [
            "aws_vpc.SaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "SaDefaultPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026689049140e84ad",
            "id": "r-rtb-0a9f6337e3e2c22a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9f6337e3e2c22a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.SaIGW",
            "aws_route_table.SaPublicRT",
            "aws_vpc.SaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SaPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:398561966751:route-table/rtb-0a9f6337e3e2c22a3",
            "id": "rtb-0a9f6337e3e2c22a3",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SA-Public-RT"
            },
            "tags_all": {
              "Name": "SA-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-026f59223f9ddc116"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SaPublicSNRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a79f6f83ca2fe3d7",
            "route_table_id": "rtb-0a9f6337e3e2c22a3",
            "subnet_id": "subnet-015d424d55738a30c"
          },
          "dependencies": [
            "aws_route_table.SaPublicRT",
            "aws_subnet.SaPublicSN1",
            "aws_vpc.SaVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WEBSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:398561966751:security-group/sg-0d0c8fe9eed5517f8",
            "description": "Enable HTTP access via port 80 and SSH access via port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0c8fe9eed5517f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WEBSG",
            "name_prefix": "",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WEBSG"
            },
            "tags_all": {
              "Name": "WEBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-026f59223f9ddc116"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SaPublicSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:398561966751:subnet/subnet-015d424d55738a30c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015d424d55738a30c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SA-Public-SN-1"
            },
            "tags_all": {
              "Name": "SA-Public-SN-1"
            },
            "vpc_id": "vpc-026f59223f9ddc116"
          },
          "dependencies": [
            "aws_vpc.SaVPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SaVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:398561966751:vpc/vpc-026f59223f9ddc116",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb432bd9800618b4",
            "default_route_table_id": "rtb-0faa2c819c1923c18",
            "default_security_group_id": "sg-060e63ec6d2b84926",
            "dhcp_options_id": "dopt-01a9ca8388a5c9c0f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026f59223f9ddc116",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0faa2c819c1923c18",
            "owner_id": "398561966751",
            "tags": {
              "Name": "SA-VPC"
            },
            "tags_all": {
              "Name": "SA-VPC"
            }
          }
        }
      ]
    }
  ]
}